Updated the about page content

--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
     </header>
     <div class="pokedex-window">
       <div class="about-window">
-        <h1>Project Pokédex</h1>
+        <h1>Pokédex v1.2</h1>
         <p>
-          This project is designed and created by Andreas Campan for the purposes of learning javascript that loads data from an external API and enables viewing of data points. <br /> <br/>
-          Check out the github link below for project details or other links for more about me. Thanks!
+          This project is designed and created by Andreas Campan for the purposes of learning how to utilize vanilla JavaScript to load data from an API and create webpage content. <br /> <br/>
+          Check out the links below for more details. Thanks!
         </p>
         <div class="about-logo-box">
           <a href="https://github.com/AndreasCampan/simple-js-app" target="_blank">
