--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.production.css" >
   </head>
   <body>
-    <header class="page-header">
+    <header>
       <div class="page-header-box">
         <!------------Special power bttn for effects later------------>
         <div class="header-powerbttn"></div>
