Minor Spelling and Code edits
-Updated the about page content
-Updated the style sheets for minor mobile devices adjustments
-Removed unnecessary comments

--- a/about.html
+++ b/about.html
@@ -6,16 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Pokédex</title>
-    <!--The logo that will be displayed in the tab bar/bookmark-->
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.production.css" >
   </head>
   <body>
-    <header class="page-header">
+    <header>
       <div class="page-header-box">
-        <!------------Special power bttn for effects later------------>
+        <!------------Power Button Mimic------------>
         <div class="header-powerbttn"></div>
-        <!------------Navigation Menu at the top------------>
         <nav>
           <ul role="menu">
             <li role="presentation">
@@ -32,12 +30,11 @@
     </header>
     <div class="pokedex-window">
       <div class="about-window">
-        <h1>Project Pokédex</h1>
+        <h1>Pokédex v2.0</h1>
         <p>
-          This project is designed and created by Andreas Campan for the purposes of learning javascript that loads data from an external API and enables viewing of data points. <br /> <br/>
-          Check out the github link below for project details or other links for more about me. Thanks!
-        </p>
-        <div class="about-logo-box">
+          This project is designed and created for the purposes of learning how to utilize vanilla JavaScript to load data from an API and create webpage content from it. <br /> <br/>
+          Check out the links below for more details. Thanks!
+          <br /> <br/>
           <a href="https://github.com/AndreasCampan/simple-js-app" target="_blank">
           <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
           <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
