--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedéx</title>
-    <!--The logo that will be displayed in the tab bar/bookmark-->
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.production.css" >
   </head>
   <body>
-    <header>
+    <header></header>
       <div class="page-header-box">
-        <!------------Special power bttn for effects later------------>
+        <!------------Power Button Mimic------------>
         <div class="header-powerbttn"></div>
-        <!------------Navigation Menu at the top------------>
         <nav>
           <ul role="menu">
             <li role="presentation">
